# pixiplex-py

./: .gitignore  README.md  Untitled.ipynb  bun.lockb  debug.ipynb  forcegraph.ipynb  forcegraph.py  package.json  pyproject.toml
D3ForceLayout/: D3Force.js  D3Force.ts  D3ForceLayout.py
ForceNetwork/: ForceNetwork.py  ForceNetwork.ts
ForcePlot/: .bokeh  ForceExt.py  ForcePlot.js  GraphRenderer2.py  Readme.md  ScatterEx.py  graph_example.py  package-lock.json  package.json  tsconfig.json
pixiplex/: main.py
pixiplex/static/: debug.html  index.html  pixinet.js  widget.js
pixiplex/static/js/: sim.js
pixiplex/templates/: index.html
src/: debug.pug  index.pug  lasso.js  pixinet.js  pixinet.py  widget.css  widget.js
src/pixiplex/: __init__.py  anywidget_debug.py  bokeh_app.py  index.pug  panel_app.py  pixinet.js  pixinet.py  shiny_app.py  shiny_debug.py  shiny_debug2.py  trait_debug.py  widget.css  widget.js
src/pixiplex/static/: pixinet.js  widget.css  widget.js
todo/pixiplex/: __init__.py
todo/pixiplex/static/: index.html  pixinet.js  widget.js
trash/: ForcePlot.ts  scratch.txt  skypack.d.ts
