[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pixiplex"
version = "0.0.1"
readme = "README.md"
dependencies = [
	"anywidget"
]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

[tool.hatch.build.targets.sdist]
packages = ["src/pixiplex"]

[tool.hatch.build.targets.wheel]
packages = ["src/pixiplex"]

[template.plugins.default]
src-layout = true

# [tool.hatch.build]
# only-packages = true
# artifacts = ["pixiplex/static/*"]

# [tool.hatch.build.hooks.jupyter-builder]
# # build-function = "hatch_jupyter_builder.npm_builder"
# ensured-targets = ["pixiplex/static/widget.js"]
# skip-if-exists = ["pixiplex/static/widget.js"]
# dependencies = ["hatch-jupyter-builder>=0.5.0"]

# [tool.hatch.build.hooks.jupyter-builder.build-kwargs]
# npm = "bun"
# build_cmd = "build"
